--- a/Module07-Synchronization/Synchronization.Tests/Synchronization.Tests.csproj
+++ b/Module07-Synchronization/Synchronization.Tests/Synchronization.Tests.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Synchronization.Core\Synchronization.Core.csproj" />
+  </ItemGroup>
+
 </Project>
