--- a/Module08-Concurrent Data Structures/DataStructures.Benchmark/DataStructures.Benchmark.csproj
+++ b/Module08-Concurrent Data Structures/DataStructures.Benchmark/DataStructures.Benchmark.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataStructures\DataStructures.csproj" />
+  </ItemGroup>
 </Project>
